--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   </section>
 
   <section class="">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2492.7958098583717!2d-0.27111728402996843!3d51.33327543124007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4875e2108c770b05%3A0x429892e690870472!2sCrystal%20Nails!5e0!3m2!1sen!2suk!4v1592830852246!5m2!1sen!2suk" width="100%" height="500"></iframe>
+    <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=56%20sydenham%20road,%20london,%20SE265QF+(My%20Business%20Name)&amp;t=&amp;z=17&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
   </section>
 
   <footer class="footer has-text-centered">
@@ -232,7 +232,9 @@
     </div>
   </footer>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/validator/13.5.2/validator.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="/scripts/contact.js" type="module"></script>
   <script src="/scripts/index.js" type="module"></script>
-  
 </body>
 </html>
