--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   <nav class="navbar is-fixed-top has-shadow">
     <div class="container">
       <div class="navbar-brand">
-        <a class="navbar-item" href="/">
-          <a href="/index.html" class="navbar-item">Nail Bar 56</a>
-        </a>
-        
+        <a href="/index.html" class="navbar-item">Nail Bar 56</a>
+
         <span class="navbar-burger">
           <span></span>
           <span></span>
@@ -188,7 +186,7 @@
     <div class="container has-text-centered">
       <p><i class="fa fa-clock-o fa-lg mb-3"></i> <strong>Opening Hours:</strong></p>
       <p>Mon - Thurs: 10:00AM - 7:00PM</p>
-      <p>Sat: 9:30PM - 7:00PM</p>
+      <p>Fri - Sat: 9:30PM - 7:00PM</p>
       <p>Sun: Closed</p>
       <br>
       <br>
