--- a/pricing.html
+++ b/pricing.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="column is-one-third-desktop is-half-tablet pricing__column">
-          <h2 class="title pricing__title">SNS</h2>
+          <h2 class="title pricing__title">Dipping Powder(SNS)</h2>
           <table class="table is-hoverable table__sns"></table>
         </div>
 
@@ -140,7 +140,7 @@
     <div class="container has-text-centered">
       <p><i class="fa fa-clock-o fa-lg mb-3"></i> <strong>Opening Hours:</strong></p>
       <p>Mon - Thurs: 10:00AM - 7:00PM</p>
-      <p>Sat: 9:30PM - 7:00PM</p>
+      <p>Fri - Sat: 9:30PM - 7:00PM</p>
       <p>Sun: Closed</p>
       <br>
       <br>
