--- a/pricing.html
+++ b/pricing.html
@@ -146,7 +146,7 @@
       <br>
       <p> <i class="fa fa-phone fa-lg"></i> <strong>Phone:</strong> <a class="footer__link" href="tel:01372720019">020 8778 5359</a></p> 
       <br>
-      <p> <i class="fa fa-envelope-o fa-lg"></i> <strong>Email:</strong> <a class="footer__link" href="mailto:nailbar56sydenhem@gmail.com">nailbar56sydenhem@gmail.com</a></p> 
+      <p> <i class="fa fa-envelope-o fa-lg"></i> <strong>Email:</strong> <a class="footer__link" href="mailto:Nailbar56sydenham@gmail.com">nailbar56sydenhem@gmail.com</a></p> 
       <br>
       <p class="mb-4"><i class="fa fa-map-marker fa-lg"></i>  <strong>Address:</strong> 56 Sydenham Rd, London SE26 5QF</p>    
 
