--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <p>Sun: Closed</p>
       <br>
       <br>
-      <p> <i class="fa fa-phone fa-lg"></i> <strong>Phone:</strong> <a class="footer__link" href="tel:02087785359">020 8778 5359</a></p> 
+      <!-- <p> <i class="fa fa-phone fa-lg"></i> <strong>Phone:</strong> <a class="footer__link" href="tel:02087785359">020 8778 5359</a></p>  -->
       <br>
       <p> <i class="fa fa-envelope-o fa-lg"></i> <strong>Email:</strong> <a class="footer__link" href="mailto:Nailbar56sydenham@gmail.com">nailbar56sydenhem@gmail.com</a></p> 
       <br>
