--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="navbar-end">
           <a href="/index.html" class="navbar-item">Home</a>
           <a href="/pricing.html" class="navbar-item">Pricing</a>
-          <a href="#booking" class="navbar-item">Booking</a>
+          <a href="#booking" class="navbar-item">Contact us</a>
         </div>
       </div>
     </div>
@@ -158,7 +158,7 @@
   <!-- Booking -->
   <section class="section booking global-padding" id="booking">
     <div class="container">
-      <h3 class="title has-text-centered">Booking</h2>
+      <h3 class="title has-text-centered">Contact us</h2>
       <hr>
       <div class="columns is-centered mt-6">
         <div class="column is-three-fifths">
@@ -209,7 +209,7 @@
       <br>
       <p> <i class="fa fa-phone fa-lg"></i> <strong>Phone:</strong> <a class="footer__link" href="tel:02087785359">020 8778 5359</a></p> 
       <br>
-      <p> <i class="fa fa-envelope-o fa-lg"></i> <strong>Email:</strong> <a class="footer__link" href="mailto:Nailbar56sydenham@gmail.com">nailbar56sydenhem@gmail.com</a></p> 
+      <p> <i class="fa fa-envelope-o fa-lg"></i> <strong>Email:</strong> <a class="footer__link" href="mailto:Nailbar56sydenham@gmail.com">nailbar56sydenham@gmail.com</a></p> 
       <br>
       <p class="mb-4"><i class="fa fa-map-marker fa-lg"></i>  <strong>Address:</strong> 56 Sydenham Rd, London SE26 5QF</p>    
 
