price name update

--- a/pricing.html
+++ b/pricing.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="column is-one-third-desktop is-half-tablet pricing__column">
-          <h2 class="title pricing__title">Gel-Powder</h2>
+          <h2 class="title pricing__title">Colour Acrylic</h2>
           <table class="table is-hoverable table__gel-powder"></table>
         </div>
 
