--- a/pricing.html
+++ b/pricing.html
@@ -140,7 +140,7 @@
     <div class="container has-text-centered">
       <p><i class="fa fa-clock-o fa-lg mb-3"></i> <strong>Opening Hours:</strong></p>
       <p>Mon - Sat: 10:00AM - 7:00PM</p>
-      <p>Sun: Closed</p>
+      <p>Sun: 11:00AM - 5:00PM</p>
       <br>
       <br>
       <p> <i class="fa fa-phone fa-lg"></i> <strong>Phone:</strong> <a class="footer__link" href="tel:02087785359">020 8778 5359</a></p> 
