--- a/pricing.html
+++ b/pricing.html
@@ -67,6 +67,13 @@
         </div>
 
         <div class="column is-one-third-desktop is-half-tablet pricing__column">
+          <h2 class="title pricing__title">Biab-Nails</h2>
+          <table class="table is-hoverable table__biab"></table>
+        </div>
+
+
+
+        <div class="column is-one-third-desktop is-half-tablet pricing__column">
           <h2 class="title pricing__title">Manicure/Pedicure</h2>
           <table class="table is-hoverable table__manicure-pedicure"></table>
         </div>
