--- a/pricing.html
+++ b/pricing.html
@@ -101,7 +101,7 @@
   <!-- Booking -->
   <section class="section booking global-padding" id="booking">
     <div class="container">
-      <h3 class="title has-text-centered">Booking</h2>
+      <h3 class="title has-text-centered">Booking enquiries</h2>
       <hr>
       <div class="columns is-centered">
         <div class="column is-three-fifths">
